adbpo_geonode/static/less/site_base.less
.row {
    .col-xs-10 h4 {
        font-weight: 400;
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
        font-size: 18px;
        white-space: nowrap;
        a {
            color: #333;
            &:hover {
                color: #f05a24;
                text-decoration: none;
            }
        }
    }
    .abstract {
        font-weight: 300;
        color: #999;
    }
    .item-details .item-items .list-inline li a {
        font-weight: 300;
        color: #999;
        &:hover {
            color: #555;
        }
    }
    .item-details .item-items {
        border: none;
    }
}

.item-container {
    .profile-avatar {
        border: none;
    }
    .item-thumb {
        border: 1px solid #ccc;
        width: 28%;
    }
    .item-details {
        border-top: 1px solid #ccc;
    }
    .col-lg-8 {
        width: 70%;
        margin-left: 2%;
    }
}
.adbpo-menu {
    &:nth-child(even){
        background: #dfebf7
    }
    h3 {
        margin-left: 9%;
    }
}

.adbpo-home-facets {
    padding: 0.5em 0;
    .col-md-3 {
        text-align: center;
    }
    img {
        width: 3.75em;
    }
    h5 {
        font-size: 0.875em;
        font-weight: 700;
    }
}
#showcase {
    padding: 0px !important;
    .row .text-center .home-facets {
        padding: 0;
        .col-md-3 {
            h2 {
                font-size: 1.5em;
            }
            .fa {
                font-size: 2.5em;
            }
        }
    }
}

